# StarResonanceFishing

./: .gitignore  AGENTS.md  LICENSE  README.md  StarResonanceFishing.spec  config.yaml  debug_detection_area.py  get_window_title.py  main.py  pyproject.toml  requirements-dev-lock.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: build.yml  pr-build.yml
scripts/: check.py  generate_version.py  pack.py  util.py
src/: __init__.py  config_manager.py  fishing_bot.py  image_detector.py  input_controller.py  input_controller_winapi.py  logger.py  utils.py  window_manager.py
src/phases/: __init__.py  casting_phase.py  completion_phase.py  preparation_phase.py  tension_phase.py  waiting_phase.py
