[project]
name = "StarResonanceFishing"
dynamic = ["version"]
description = "A bot for fishing in Star Resonance."
requires-python = ">=3.11"

dependencies = [
    "mouseinfo>=0.1.3",
    "numpy>=1.24.3",
    "opencv-python>=4.8.1.78",
    "pillow>=10.1.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pymsgbox>=2.0.1",
    "pynput>=1.7.6",
    "pyperclip>=1.11.0",
    "pyrect>=0.2.0",
    "pyscreeze>=1.0.1",
    "pytesseract>=0.3.13",
    "pytweening>=1.2.0",
    "pyyaml>=6.0.1",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "pip>=25.3",
    "pyinstaller>=6.18.0",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E722"]
